# bitwarden-to-keepass

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  bw_dump.py  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  write_to_file.py
.devcontainer/: Dockerfile  devcontainer.json
.github/files/: package-lock.json  release.config.cjs
.github/workflows/: bandit.yml  release.yml
ip/: bitwarden-export-cli.py  bitwarden-to-keepass.py  get-otp-bitwarden_export.py  keepass-to-bitwarden.py  requirements.txt
src/bitwarden_exporter/: __init__.py  __main__.py  bw_models.py  cli.py  keepass.py  models.py  settings.py  write_to_file.py
src/bitwarden_to_keepass/: __main__.py
