[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = '    '

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "bitwarden-exporter"
version = "1.0.0"
description = "Export Bitwarden items to Keepass"
authors = ["arpan <arpan.rec@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [{ include = "bitwarden_exporter", from = "src" }]
scripts = { "bitwarden-exporter" = "bitwarden_exporter.__main__:main" }

[tool.poetry.dependencies]
python = "^3.10"
gnupg = "2.3.1"
pydantic = "2.9.2"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.10"
black = "24.10.0"
isort = "5.13.2"
mypy = "1.13.0"
neovim = "0.3.1"
packaging = "24.2"
poetry-plugin-export = "1.8.0"
pylint = "3.3.1"
pyright = "1.1.388"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
